--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -10,7 +10,7 @@
     
 
     <a href = "../index.html">
-        <img src ="img/btn-imagen2.jpg" alt="no_carga_mensaje" tittle="Ir al index" width="20px">
+        <img src ="img/imagen2.jpg" alt="no_carga_mensaje" tittle="Ir al index" width="20px">
     </a>
 </body>
 </html>
