--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -9,7 +9,7 @@
     <p> Bienvenido a la pagina de servixios...</p>
     
     <a href = "../index.html">
-        <img src ="img/call-to-action-more-info-button-7168612_1280.png" alt="no_carga_mensaje" tittle="Ir al index" width="20px">
+        <img src ="C:\GitNew\myRepositorioNew\img\Imagen 3.png" alt="no_carga_mensaje" tittle="Ir al index" width="20px">
     </a>
 </body>
 </html>
