--- a/index.html
+++ b/index.html
@@ -85,12 +85,18 @@
 <hr>
 <!--imagen en la pagina-->
 <a href = "#">
-    <img src ="img/imagen2.jpg" alt="" width="20px">
+    <img src ="img\imagen2.jpg" alt="" width="20px">
+</a>
+<a href = "#">
+    <img src ="img\Imagen 3.png" alt="" width="60px">
+</a>
+<a href = "#">
+    <imag src ="img\Imagen4.png" alt="" width="100px">
 </a>
 
 <hr>
 <!--tablas-->
-<!-- ejem de 3x4-->
+<!-- ejem de 4x5-->
 <table border="2px">
     <tr>
         <th>ID</th>
