--- a/index.html
+++ b/index.html
@@ -130,6 +130,50 @@
     </tr>
 
 </table>
+<div style ="width: 100%; background:#CAD3E0;">
+    <form action="">
+        <label for="">Formulario Estudiante Nuevo</label><br>
+        <input type="number" style="width: 50%; background: #CAD3E0;"placeholder="Ingrese numero de ID"><br>
+        <input type="text" style ="width:50%; background: #CAD3E0;" placeholder="Ingresar Nombres"><br>
+        <input type="text" style="width:50%; background: #CAD3E0;" placeholder="Ingrese Apellidos"><br>
+        <input type="text" style="width: 50%; background: #CAD3E0;" placeholder="Ingrese E-mail"><br>
+        <select name="" id="">
+        <!--Lista-->
+        <label for="">Seleccione la ciudad</label>
+            <option value="">Aguachica</option>
+            <option value="">Minas</option>
+            <option value="">libano</option>
+        </select>
+        <br>
+        <!--radio-->
+        <label for="">Seleccione según su identidad de Género</label><br>
+        <input type="radio" name="genero"><label for="">Masculino</label>
+        <input type="radio" name="genero"><label for="">Femenino</label>
+        <input type="radio" name="genero"><label for="">Transformers</label>
+        <br>
+        <!--checkbox-->
+        <label for="">Seleccione su hobbie</label><br>
+        <input type="checkbox"><label for="">Gym</label>
+        <input type="checkbox"><label for="">Rodar</label>
+        <input type="checkbox"><label for="">TkTk</label>
+        <br>
+        <!--TextAreas: cada text con areas y columnas-->
+        <label for="">Ingrese un mensaje</label><br>
+        <textarea name="" id=""></textarea>
+        <br>
+        <label for="">Ingrese sus credenciales para el acceso al sistema</label><br>
+        <input type="text" placeholder="Ingrese el usuario"><br>
+        <input type="password" placeholder="Ingrese contraseña"><br>
+        <input type="submit" placeholder="Resgistrar Datos"><br>
 
+    
+    </form>
+<h3>Audio</h3>
+<audio src="link"controls></audio>
+<h3>Video local</h3>
+<video src="link"contrtols></video>
+<!--Insertar video por API YouTube-->
+<!--se copia y pega el iframe-->
+</div>
 </body>
 </html>
