--- a/index.html
+++ b/index.html
@@ -169,11 +169,20 @@
     
     </form>
 <h3>Audio</h3>
-<audio src="link"controls></audio>
+<audio src="C:\GitNew\myRepositorioNew\audios\WhatsApp Audio 2025-03-04 at 11.32.53 AM.mpeg"controls></audio>
 <h3>Video local</h3>
-<video src="link"contrtols></video>
+<video src="C:\GitNew\myRepositorioNew\videos\WhatsApp Video 2025-03-04 at 11.32.52 AM.mp4"controls></video>
+<br>
 <!--Insertar video por API YouTube-->
 <!--se copia y pega el iframe-->
+<!-- insertar video por API de YouTube -->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oBofuVYDoG4?si=3DZrRbp8lLpx2kwY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<br>
+<!-- Derecho de autor -->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IHq7PfVbwQQ?si=rCswWopR9ScAq4zU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </div>
 </body>
 </html>
