--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
     
     </form>
 <h3>Audio</h3>
-<audio src="C:\GitNew\myRepositorioNew\audios\WhatsApp Audio 2025-03-04 at 11.32.53 AM.mpeg"controls></audio>
+<audio src="C:\GitNew\myRepositorioNew\audios\audio1.mpeg"controls></audio>
 <h3>Video local</h3>
-<video src="C:\GitNew\myRepositorioNew\videos\WhatsApp Video 2025-03-04 at 11.32.52 AM.mp4"controls></video>
+<video src="C:\GitNew\myRepositorioNew\videos\video1.mp4"controls alt="" width="550px"></video>
 <br>
 <!--Insertar video por API YouTube-->
 <!--se copia y pega el iframe-->
