--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
     
     </form>
 <h3>Audio</h3>
-<audio src="C:\GitNew\myRepositorioNew\audios\audio1.mpeg"controls></audio>
+<audio src="audios/audio2.mp3"controls></audio>
 <h3>Video local</h3>
-<video src="C:\GitNew\myRepositorioNew\videos\video1.mp4"controls alt="" width="550px"></video>
+<video src="videos/video2.mp4"controls></video> 
 <br>
 <!--Insertar video por API YouTube-->
 <!--se copia y pega el iframe-->
